Added Images to About Us

--- a/About.html
+++ b/About.html
@@ -10,6 +10,15 @@
                 <a href="index.html">Home</a>
             </li>
         </ul>
-
+        <section>
+            <img src="/assests/images/Gon.jpg"
+                title="Gon from HunterXHunter"
+                alt="Gon, HunterXHunter, Anime, ..."
+                width="200" height="200" />
+            <img src="/assests/images/HXH.jpg"
+                title="HunterXHunter Characters"
+                alt="HunterXHunter, stuff, things"
+                width="200" height="200" />
+        </section>
     </body>
 </html>
