Added Video to About and Created Contact

--- a/About.html
+++ b/About.html
@@ -11,6 +11,7 @@
             </li>
         </ul>
         <section>
+            <h1>HunterXHunter</h1>
             <img src="/assests/images/Gon.jpg"
                 title="Gon from HunterXHunter"
                 alt="Gon, HunterXHunter, Anime, ..."
@@ -19,6 +20,13 @@
                 title="HunterXHunter Characters"
                 alt="HunterXHunter, stuff, things"
                 width="200" height="200" />
+        </section>
+        <section>
+            <h1>Vidoes I like</h1>
+            <video width="320" height="240" controls>
+                <source src="/assests/videos/30 Sec Video.mp4" type="video/mp4" />
+                 Sorry, your browser does not support this video.
+            </video>
         </section>
     </body>
 </html>
